--- a/index.ipynb
+++ b/index.ipynb
@@ -78,11 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84554"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_population = greenville['Pol']\n",
+    "greenville_population = greenville['Population']\n",
     "greenville_population # 84554"
    ]
   },
@@ -96,12 +107,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "area = None\n",
+    "area = greenville['Area']\n",
     "area # 68"
    ]
   },
@@ -120,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "city_keys = None\n",
+    "city_keys = gre\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
